--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <meta name="viewport" content="width=device-width" />
   </head>
   <body style="margin: 0; padding: 0;">
-    <img src = "https://s3.amazonaws.com/unmasking-html-emails/info.png">
+    <img src="https://s3.amazonaws.com/unmasking-html-emails/info.png" alt="La Amor Peligrosa vs. La Fuega Fatal" style="display:block;max-width:100%;" width="600">
   </body>
 </html>
