--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </head>
   <body style="margin: 0; padding: 0;">
     <img src="https://s3.amazonaws.com/unmasking-html-emails/info.png" alt="La Amor Peligrosa vs. La Fuega Fatal" style="display:block;max-width:100%;" width="600">
+    <h1 style="color:#3a383a">Championship Match!</h1>
+    <p>Reigning Champion La Fuega Fatal will defend her title against the top contender, La Amor Peligrosa. Will the contender's attacks be enough to seize the belt, or will she go down in flames?</p>
   </body>
 </html>
