--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width" />
   </head>
   <body style="margin: 0; padding: 0;">
-    <table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
-      <td>
-          <img alt="La Amor Peligrosa vs. La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/info.png " style="display: block; max-width: 100%;" width="600" />
-      </td>
+    <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+      <tr>
+        <td>
+          <img alt="La Amor Peligrosa vs. La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/info.png" style="display: block; max-width: 100%;" width="600" />
+        </td>
+      </tr>
+      <tr>
+        <td style="color: #3a383a; font-family: Georgia, serif; font-size: 42px; font-weight: bold; text-transform: uppercase; line-height: 44px; padding-top: 20px">Championship Match!</td>
+      </tr>
     </table>
   </body>
 </html>
