With new images

--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width" />
   </head>
   <body style="margin: 0; padding: 0;">
-    <table border="0" cellpadding="0" cellspacing="0" width="100%"
-           style="background-color: #e4c59a;
-                  background-image:url(https://s3.amazonaws.com/unmasking-html-emails/bg.jpg)">
+    <table border="0" cellpadding="0" cellspacing="0" style="background-color: #e4c59a; background-image: url('https://s3.amazonaws.com/unmasking-html-emails/bg.jpg');" width="100%">
       <tr>
         <td>
           <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
             <tr>
               <td>
-                <img alt="La Amor Peligrosa vs. La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/info.png " style="display: block; max-width: 100%;" width="600" />
+                <img alt="La Amor Peligrosa vs. La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/info.png" style="display: block; max-width: 100%;" width="600" />
               </td>
             </tr>
             <tr>
@@ -25,6 +23,16 @@
             <tr>
               <td style="color: #3a383a; font-family: Georgia, serif; font-size: 18px; line-height: 27px; padding-top: 5px;">
                 Reigning Champion La Fuega Fatal will defend her title against the top contender, La Amor Peligrosa. Will the contender's attacks be enough to seize the belt, or will she go down in flames?
+              </td>
+            </tr>
+          </table>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+            <tr>
+              <td style="padding-top:15px">
+                <img alt="La Amor Peligrosa" src="https://s3.amazonaws.com/unmasking-html-emails/la-amor-peligrosa.png"  width="300"/>
+              </td>
+              <td style="padding-top:15px">
+                <img alt="La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/la-fuega-fatal.png"  width="300"/>
               </td>
             </tr>
           </table>
