--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
           <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
             <tr>
               <td>
+
                 <img alt="La Amor Peligrosa vs. La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/info.png" style="display: block; max-width: 100%;" width="600" />
+
               </td>
             </tr>
             <tr>
@@ -28,11 +30,22 @@
           </table>
           <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
             <tr>
-              <td style="padding-top:15px">
-                <img alt="La Amor Peligrosa" src="https://s3.amazonaws.com/unmasking-html-emails/la-amor-peligrosa.png"  width="300"/>
+              <td style="padding-top: 15px;">
+                <table border="0" cellpadding="0" cellspacing="0" width="300" style="text-align: center; text-transform: uppercase;">
+                  <tr>
+                    <td>
+                      <img alt="La Amor Peligrosa" src="https://s3.amazonaws.com/unmasking-html-emails/la-amor-peligrosa.png" style="display: block; max-width: 100%;" width="300" />
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="color: #b83466; font-family: Georgia, serif; font-size: 20px; font-weight: bold; line-height: 20px; padding-top: 5px;">
+                      Contender
+                    </td>
+                  </tr>
+                </table>
               </td>
-              <td style="padding-top:15px">
-                <img alt="La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/la-fuega-fatal.png"  width="300"/>
+              <td style="padding-top: 15px;">
+                <img alt="La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/la-fuega-fatal.png" style="display: block; max-width: 100%;" width="300" />
               </td>
             </tr>
           </table>
