--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
           <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
             <tr>
               <td>
-
                 <img alt="La Amor Peligrosa vs. La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/info.png" style="display: block; max-width: 100%;" width="600" />
-
               </td>
             </tr>
             <tr>
@@ -31,7 +29,7 @@
           <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
             <tr>
               <td style="padding-top: 15px;">
-                <table border="0" cellpadding="0" cellspacing="0" width="300" style="text-align: center; text-transform: uppercase;">
+                <table border="0" cellpadding="0" cellspacing="0" style="text-align: center; text-transform: uppercase;" width="300">
                   <tr>
                     <td>
                       <img alt="La Amor Peligrosa" src="https://s3.amazonaws.com/unmasking-html-emails/la-amor-peligrosa.png" style="display: block; max-width: 100%;" width="300" />
@@ -40,6 +38,18 @@
                   <tr>
                     <td style="color: #b83466; font-family: Georgia, serif; font-size: 20px; font-weight: bold; line-height: 20px; padding-top: 5px;">
                       Contender
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <table border="0" cellpadding="0" cellspacing="0" width="140" align="center">
+                        <tr>
+                          <td height="5" style="font-size: 5px; line-height: 5px;"></td>
+                        </tr>
+                        <tr>
+                          <td height="2" style="font-size: 2px; line-height: 2px;" bgcolor="#902950"></td>
+                        </tr>
+                      </table>
                     </td>
                   </tr>
                 </table>
@@ -54,3 +64,4 @@
     </table>
   </body>
 </html>
+
