--- a/index.html
+++ b/index.html
@@ -42,20 +42,53 @@
                   </tr>
                   <tr>
                     <td>
-                      <table border="0" cellpadding="0" cellspacing="0" width="140" align="center">
+                      <table align="center" border="0" cellpadding="0" cellspacing="0" width="140">
                         <tr>
                           <td height="5" style="font-size: 5px; line-height: 5px;"></td>
                         </tr>
                         <tr>
-                          <td height="2" style="font-size: 2px; line-height: 2px;" bgcolor="#902950"></td>
+                          <td bgcolor="#902950" height="2" style="font-size: 2px; line-height: 2px;"></td>
                         </tr>
                       </table>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="color: #902950; font-family: Georgia, serif; font-size: 20px; font-weight: bold; line-height: 20px; padding-top: 5px;">
+                      21-0-0
                     </td>
                   </tr>
                 </table>
               </td>
               <td style="padding-top: 15px;">
-                <img alt="La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/la-fuega-fatal.png" style="display: block; max-width: 100%;" width="300" />
+                <table border="0" cellpadding="0" cellspacing="0" style="text-align: center; text-transform: uppercase;" width="300">
+                  <tr>
+                    <td>
+                      <img alt="La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/la-fuega-fatal.png" style="display: block; max-width: 100%;" width="300" />
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="color: #c11e29; font-family: Georgia, serif; font-size: 20px; font-weight: bold; line-height: 20px; padding-top: 5px;">
+                      Champion
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <table align="center" border="0" cellpadding="0" cellspacing="0" width="120">
+                        <tr>
+                          <td height="5" style="font-size: 5px; line-height: 5px;"></td>
+                        </tr>
+                        <tr>
+                          <td bgcolor="#951720" height="2" style="font-size: 2px; line-height: 2px;"></td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="color: #951720; font-family: Georgia, serif; font-size: 20px; font-weight: bold; line-height: 20px; padding-top: 5px;">
+                      23-0-0
+                    </td>
+                  </tr>
+                </table>
               </td>
             </tr>
           </table>
