--- a/index.html
+++ b/index.html
@@ -4,32 +4,69 @@
     <meta charset="utf-8">
     <title>Championship Match!</title>
     <meta name="viewport" content="width=device-width" />
+    <style>
+      @media screen and (max-width: 600px) {
+        .width-full {
+          width: 100% !important;
+        }
+        .stack-cell {
+          display: block !important;
+          width: 100% !important;
+        }
+      }
+
+      @media screen and (max-width: 320px) {
+
+        .email-title {
+          font-size: 20px !important;
+          line-height: 30px !important;
+          padding-top: 15px !important; }
+
+        .email-intro {
+          font-size: 14px !important;
+          line-height: 21px !important; }
+
+      }
+
+      @media screen and (min-width: 321px) and (max-width: 375px) {
+
+        .email-title {
+          font-size: 22px !important;
+          line-height: 36px !important; }
+
+      }
+    </style>
+    <!--[if ]>
+      <style>
+
+      </style>
+    <![endif]-->
   </head>
   <body style="margin: 0; padding: 0;">
     <table border="0" cellpadding="0" cellspacing="0" style="background-color: #e4c59a; background-image: url('https://s3.amazonaws.com/unmasking-html-emails/bg.jpg');" width="100%">
       <tr>
-        <td>
-          <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+        <td style="padding: 0 10px;">
+          <table align="center" border="0" cellpadding="0" cellspacing="0" class="width-full" width="600">
             <tr>
               <td>
                 <img alt="La Amor Peligrosa vs. La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/info.png" style="display: block; max-width: 100%;" width="600" />
               </td>
             </tr>
             <tr>
-              <td style="color: #3a383a; font-family: Georgia, serif; font-size: 42px; font-weight: bold; line-height: 44px; padding-top: 20px; text-transform: uppercase;">
+              <td class="email-title" style="color: #3a383a; font-family: Georgia, serif; font-size: 42px; font-weight: bold; line-height: 44px; padding-top: 20px; text-transform: uppercase;">
                 Championship Match!
               </td>
             </tr>
             <tr>
-              <td style="color: #3a383a; font-family: Georgia, serif; font-size: 18px; line-height: 27px; padding-top: 5px;">
+              <td class="email-intro" style="color: #3a383a; font-family: Georgia, serif; font-size: 18px; line-height: 27px; padding-top: 5px;">
                 Reigning Champion La Fuega Fatal will defend her title against the top contender, La Amor Peligrosa. Will the contender's attacks be enough to seize the belt, or will she go down in flames?
               </td>
             </tr>
           </table>
-          <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+          <table align="center" border="0" cellpadding="0" cellspacing="0" class="width-full" width="600">
             <tr>
-              <td style="padding-top: 15px;">
-                <table border="0" cellpadding="0" cellspacing="0" style="text-align: center; text-transform: uppercase;" width="300">
+              <td class="stack-cell" style="padding-top: 15px;">
+                <table align="center" border="0" cellpadding="0" cellspacing="0" style="text-align: center; text-transform: uppercase;" width="300">
                   <tr>
                     <td>
                       <img alt="La Amor Peligrosa" src="https://s3.amazonaws.com/unmasking-html-emails/la-amor-peligrosa.png" style="display: block; max-width: 100%;" width="300" />
@@ -59,8 +96,8 @@
                   </tr>
                 </table>
               </td>
-              <td style="padding-top: 15px;">
-                <table border="0" cellpadding="0" cellspacing="0" style="text-align: center; text-transform: uppercase;" width="300">
+              <td class="stack-cell" style="padding-top: 15px;">
+                <table align="center" border="0" cellpadding="0" cellspacing="0" style="text-align: center; text-transform: uppercase;" width="300">
                   <tr>
                     <td>
                       <img alt="La Fuega Fatal" src="https://s3.amazonaws.com/unmasking-html-emails/la-fuega-fatal.png" style="display: block; max-width: 100%;" width="300" />
@@ -97,4 +134,3 @@
     </table>
   </body>
 </html>
-
