--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 
       }
     </style>
-    <!--[if ]>
+    <!--[if gte mso 12]>
       <style>
-
+          td {
+            mso-line-height-rule: exactly;
+          }
       </style>
     <![endif]-->
   </head>
@@ -81,10 +83,10 @@
                     <td>
                       <table align="center" border="0" cellpadding="0" cellspacing="0" width="140">
                         <tr>
-                          <td height="5" style="font-size: 5px; line-height: 5px;"></td>
+                          <td height="5" style="font-size: 5px; line-height: 5px;">&nbsp; </td>
                         </tr>
                         <tr>
-                          <td bgcolor="#902950" height="2" style="font-size: 2px; line-height: 2px;"></td>
+                          <td bgcolor="#902950" height="2" style="font-size: 2px; line-height: 2px;">&nbsp; </td>
                         </tr>
                       </table>
                     </td>
@@ -112,10 +114,10 @@
                     <td>
                       <table align="center" border="0" cellpadding="0" cellspacing="0" width="120">
                         <tr>
-                          <td height="5" style="font-size: 5px; line-height: 5px;"></td>
+                          <td height="5" style="font-size: 5px; line-height: 5px;">&nbsp;</td>
                         </tr>
                         <tr>
-                          <td bgcolor="#951720" height="2" style="font-size: 2px; line-height: 2px;"></td>
+                          <td bgcolor="#951720" height="2" style="font-size: 2px; line-height: 2px;">&nbsp;</td>
                         </tr>
                       </table>
                     </td>
