--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
     </style>
     <!--[if gte mso 12]>
       <style>
-          td {
-            mso-line-height-rule: exactly;
-          }
+        td {
+          mso-line-height-rule: exactly; }
       </style>
     <![endif]-->
   </head>
@@ -83,10 +82,10 @@
                     <td>
                       <table align="center" border="0" cellpadding="0" cellspacing="0" width="140">
                         <tr>
-                          <td height="5" style="font-size: 5px; line-height: 5px;">&nbsp; </td>
+                          <td height="5" style="font-size: 5px; line-height: 5px;">&nbsp;</td>
                         </tr>
                         <tr>
-                          <td bgcolor="#902950" height="2" style="font-size: 2px; line-height: 2px;">&nbsp; </td>
+                          <td bgcolor="#902950" height="2" style="font-size: 2px; line-height: 2px;">&nbsp;</td>
                         </tr>
                       </table>
                     </td>
@@ -128,6 +127,21 @@
                     </td>
                   </tr>
                 </table>
+              </td>
+            </tr>
+          </table>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" class="width-full" width="600">
+            <tr>
+              <td style="padding-top: 30px; text-align: center;">
+                <div>
+                  <!--[if mso]>
+                    <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://buttons.cm" style="height:50px;v-text-anchor:middle;width:240px;" arcsize="8%" strokecolor="#000000" fillcolor="#3a383a">
+                      <w:anchorlock/>
+                      <center style="text-transform:uppercase;color:#ffffff;font-family:Georgia,serif;font-size:20px;font-weight:bold;">Buy Tickets</center>
+                    </v:roundrect>
+                  <![endif]-->
+                  <a href="http://buttons.cm" style="text-transform:uppercase;background-color:#3a383a;border:1px solid #000000;border-radius:4px;color:#ffffff;display:inline-block;font-family:Georgia,serif;font-size:20px;font-weight:bold;line-height:50px;text-align:center;text-decoration:none;width:240px;-webkit-text-size-adjust:none;mso-hide:all;">Buy Tickets</a>
+                </div>
               </td>
             </tr>
           </table>
