--- a/index.html
+++ b/index.html
@@ -14,27 +14,24 @@
           width: 100% !important;
         }
       }
-
       @media screen and (max-width: 320px) {
-
         .email-title {
           font-size: 20px !important;
           line-height: 30px !important;
           padding-top: 15px !important; }
-
         .email-intro {
           font-size: 14px !important;
           line-height: 21px !important; }
-
       }
-
       @media screen and (min-width: 321px) and (max-width: 375px) {
-
         .email-title {
           font-size: 22px !important;
           line-height: 36px !important; }
-
       }
+      .client-link a {
+        color: #3a383a !important;
+      }
+      
     </style>
     <!--[if gte mso 12]>
       <style>
@@ -137,11 +134,36 @@
                   <!--[if mso]>
                     <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://buttons.cm" style="height:50px;v-text-anchor:middle;width:240px;" arcsize="8%" strokecolor="#000000" fillcolor="#3a383a">
                       <w:anchorlock/>
-                      <center style="text-transform:uppercase;color:#ffffff;font-family:Georgia,serif;font-size:20px;font-weight:bold;">Buy Tickets</center>
+                      <center style="color:#ffffff;font-family:Georgia,serif;font-size:20px;font-weight:bold;">Buy Tickets</center>
                     </v:roundrect>
                   <![endif]-->
-                  <a href="http://buttons.cm" style="text-transform:uppercase;background-color:#3a383a;border:1px solid #000000;border-radius:4px;color:#ffffff;display:inline-block;font-family:Georgia,serif;font-size:20px;font-weight:bold;line-height:50px;text-align:center;text-decoration:none;width:240px;-webkit-text-size-adjust:none;mso-hide:all;">Buy Tickets</a>
+                  <a href="http://buttons.cm"
+                     style="background-color:#3a383a;border:1px solid #000000;border-radius:4px;color:#ffffff;display:inline-block;font-family:Georgia,serif;font-size:20px;font-weight:bold;line-height:50px;text-align:center;text-decoration:none;width:240px;mso-hide:all;
+                     -webkit-text-size-adjust:none;">Buy Tickets</a>
                 </div>
+              </td>
+            </tr>
+          </table>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" class="width-full" width="600">
+            <tr>
+              <td align="center" style="color: #3a383a; font-family: Georgia, serif; font-size: 18px; font-weight: bold; line-height: 18px; padding-top: 20px;">
+                Or, call <span class="client-link">+90 12 3456 7890</span>
+              </td>
+            </tr>
+            <tr>
+              <td align="center" style="color: #545154; font-family: Georgia, serif; font-size: 12px; padding-top: 40px;">
+                No mas? <a href="http://example.org" style="color: #545154;">Unsubscribe</a>
+              </td>
+            </tr>
+            <tr>
+              <td align="center" style="color: #545154; font-family: Georgia, serif; font-size: 12px; padding: 15px 0;">
+                Av. de las Street No. 123
+                <br />
+                Azcapotzalco Santa Barbara
+                <br />
+                01234 Ciudad de México
+                <br />
+                D.F. Mexico
               </td>
             </tr>
           </table>
